# grace-base

./: .gitignore  2d.hpp  CMakeLists.txt  Doxyfile  README.markdown  allocator.cpp  allocator.hpp  anim_utils.hpp  any.cpp  any.hpp  any_type.cpp  any_type.hpp  approximately.hpp  arch.cpp  arch.hpp  archive.cpp  archive.hpp  archive_node.cpp  archive_node.hpp  archive_node_type.hpp  array.cpp  array.hpp  array_list.hpp  array_ref.cpp  array_ref.hpp  array_type.cpp  array_type.hpp  array_utils.hpp  aspect_cast.hpp  attribute.cpp  attribute.hpp  auto_link_queue.hpp  bag.cpp  bag.hpp  bare_link_list.hpp  basic.hpp  benchmark.cpp  benchmark.hpp  binary_archive.cpp  binary_archive.hpp  (+171 more)
base/: any.cpp  arch.cpp  arch.hpp  array.cpp  array.hpp  array_list.cpp  array_list.hpp  array_ref.hpp  array_utils.hpp  auto_link_queue.hpp  bag.cpp  bare_link_list.hpp  basic.hpp  benchmark.cpp  benchmark.hpp  color.hpp  config.cpp  config.hpp  either.hpp  either_switch.hpp  error.cpp  error.hpp  exceptions.cpp  exceptions.hpp  fiber.cpp  fiber.hpp  function.cpp  function.hpp  function_error.hpp  iterators.hpp  linear_map.hpp  log.cpp  map.hpp  math.hpp  maxarray.hpp  maybe.hpp  multiset.hpp  pair.hpp  parse.hpp  priority_queue.hpp  (+18 more)
cmake/: Findevent.cmake  Findyaml.cmake
documentation/: footer.html  main.dox  style.css
event/: capabilities.hpp  event_handle.hpp  event_loop.hpp  event_loop_libevent.cpp  event_loop_libevent.hpp  events.hpp  input_manager.cpp  input_manager.hpp  input_responder.hpp  keys.cpp
geometry/: 2d.hpp  matrix.hpp  rect.cpp  rect.hpp  vector.cpp  vector.hpp
io/: archive.cpp  archive.hpp  builtin_archive.cpp  builtin_archive.hpp  embedded_asset.hpp  fd.cpp  fd.hpp  file_stream.cpp  file_stream.hpp  formatted_stream.hpp  formatters.hpp  input_stream.hpp  ioevent.hpp  memory_stream.cpp  memory_stream.hpp  network_stream.cpp  network_stream.hpp  output_stream.hpp  pipe_stream.cpp  pipe_stream.hpp  printf.hpp  process_stream.cpp  process_stream.hpp  reactor.cpp  reactor.hpp  resource.cpp  resource.hpp  resource_loader.cpp  resource_loader.hpp  resource_manager.cpp  resource_manager.hpp  resource_ptr_type.hpp  server.hpp  stdio_stream.cpp  stdio_stream.hpp  string_stream.cpp  string_stream.hpp  util.cpp  util.hpp
loaders/: object_template_loader.cpp  object_template_loader.hpp
memory/: allocator.cpp  allocator.hpp  memory_tracker.cpp  memory_tracker.hpp  static_allocator.cpp  static_allocator.hpp  stl_allocator.hpp  unique_ptr.hpp
object/: composite_type.cpp  composite_type.hpp  object.cpp  object.hpp  object_ptr_root.hpp  object_template.cpp  object_template.hpp  object_type.hpp  objectptr.hpp  property_animator.cpp  property_animator.hpp  reflect.hpp  signal.cpp  signal.hpp  signal_type.hpp  slot.hpp  spatial_object.cpp  universe.cpp  universe.hpp  universe_base.cpp  universe_base.hpp
platform/: event_loop_generic.cpp  event_loop_libevent.cpp  event_loop_libevent.hpp  libevent_util.cpp  libevent_util.hpp  paths.hpp  paths_apple.mm
serialization/: binary.cpp  binary.hpp  deserialize_object.hpp  deserialize_tuple.hpp  document.cpp  document.hpp  document_node.cpp  document_node.hpp  json.cpp  json.hpp  serialize.hpp  yaml.cpp  yaml.hpp
tests/: anim_utils_test.cpp  any_test.cpp  array_list_test.cpp  array_ref_test.cpp  array_test.cpp  aspect_cast_test.cpp  binary_archive_test.cpp  composite_test.cpp  either_test.cpp  error_test.cpp  fiber_test.cpp  formatting_test.cpp  function_test.cpp  geometry_test.cpp  link_list_test.cpp  map_test.cpp  math_test.cpp  matrix_test.cpp  maxarray_test.cpp  maybe_test.cpp  memory_stream_test.cpp  network_stream_test.cpp  priority_queue_test.cpp  process_test.cpp  reactor_test.cpp  regex_test.cpp  signal_test.cpp  simd_test.cpp  string_test.cpp  test.cpp  test.hpp  time_test.cpp  type_info_test.cpp  vector_test.cpp  work_queue_test.cpp
type/: any_type.cpp  array_type.cpp  attribute.cpp  attribute.hpp  boolean_type.cpp  boolean_type.hpp  color_type.cpp  color_type.hpp  dictionary_type.hpp  enum_type.hpp  map_type.cpp  map_type.hpp  matrix_type.cpp  matrix_type.hpp  maybe_type.cpp  maybe_type.hpp  pointer_type.cpp  pointer_type.hpp  reference_type.hpp  string_type.cpp  string_type.hpp  structured_type.cpp  structured_type.hpp  type.cpp  type.hpp  type_registry.cpp  type_registry.hpp  types.hpp  vector_type.cpp  vector_type.hpp
